--- a/conference-demo/src/main/resources/application.properties
+++ b/conference-demo/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port = 8090
-spring.datasource.url=jdbc:mysql://34.132.189.58/conference_demo
+spring.datasource.url=jdbc:mysql://IP/conference_demo
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
